refactor(app): modernize to Java 25 idiom
Name ignored lambda parameters `_` (JEP 456), matching the unnamed
bindings used elsewhere in app/: 30 sites across 21 files, covering
no-op listener defaults, computeIfAbsent/compute keys, toMap and merge
functions that keep the first value, db-scheduler handler arguments the
body never reads, and VoiceController's unused streaming callbacks.
A parameter that is actually read cannot be renamed `_` and compile, so
the compile proves each one unused.

Also use List.getFirst() for two first-element reads whose list can
never be empty: SubagentAcpRunner's sandbox argv, which always holds
the command, and TtsModel.defaultFor, where every engine has models.

play autotest passes (560 classes).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AEzEKzfaNNeBubcY9Q7Dcm